[gd_scene load_steps=9 format=3 uid="uid://bl06gdighemoi"]

[ext_resource type="Script" path="res://UI/turn_process_menu.gd" id="1_2ny1p"]
[ext_resource type="Texture2D" uid="uid://cjpxvs38nm4og" path="res://assets/icons/single_dice_white_512.png" id="2_oa8iq"]
[ext_resource type="Script" path="res://UI/one_dice_roll_button.gd" id="3_ew4oo"]
[ext_resource type="Texture2D" uid="uid://k8qb4wa57opn" path="res://assets/icons/double_dice_white_512.png" id="4_vygai"]
[ext_resource type="Script" path="res://UI/button_base.gd" id="5_ccg8j"]
[ext_resource type="Script" path="res://UI/two_dice_roll_button.gd" id="5_xpcmh"]
[ext_resource type="Texture2D" uid="uid://1wkp7ogmo3qi" path="res://assets/icons/end_turn_white_512.png" id="6_aks61"]
[ext_resource type="Texture2D" uid="uid://cnag06wfcacmk" path="res://assets/icons/shop_white_512.png" id="6_x2e0v"]

[node name="HBoxContainer" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -955.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LeftSpacer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="TurnProcessContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1
script = ExtResource("1_2ny1p")

[node name="OneDiceRollButton" type="TextureButton" parent="TurnProcessContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("2_oa8iq")
ignore_texture_size = true
stretch_mode = 4
script = ExtResource("3_ew4oo")

[node name="TwoDiceRollButton" type="TextureButton" parent="TurnProcessContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("4_vygai")
ignore_texture_size = true
stretch_mode = 4
script = ExtResource("5_xpcmh")

[node name="ShopButton" type="TextureButton" parent="TurnProcessContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("6_x2e0v")
ignore_texture_size = true
stretch_mode = 4
script = ExtResource("5_ccg8j")

[node name="EndTurnButton" type="TextureButton" parent="TurnProcessContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("6_aks61")
ignore_texture_size = true
stretch_mode = 4
script = ExtResource("5_ccg8j")

[node name="RightSpacer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="pressed" from="TurnProcessContainer/OneDiceRollButton" to="TurnProcessContainer" method="_on_one_dice_roll_button_pressed"]
[connection signal="pressed" from="TurnProcessContainer/TwoDiceRollButton" to="TurnProcessContainer" method="_on_two_dice_roll_button_pressed"]
[connection signal="pressed" from="TurnProcessContainer/ShopButton" to="TurnProcessContainer" method="_on_shop_button_pressed"]
[connection signal="pressed" from="TurnProcessContainer/EndTurnButton" to="TurnProcessContainer" method="_on_end_turn_button_pressed"]
